# AggAgent

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/aggagent/: SKILL.md
.claude/skills/aggagent/scripts/: get_segment.py  get_solution.py  search_trajectory.py
aggagent/: __init__.py  agent.py  prompts.py  tools.py
aggregation/: aggregate.py
aggregation/_strategy/: __init__.py  aggagent.py  base.py  bon.py  fewtool.py  llm_based.py  mv.py  pass_strategy.py
evaluation/: README.md  __init__.py  base.py  browsecomp.py  deepsearchqa.py  healthbench.py  researchrubrics.py
rollout/: README.md  prompts.py  react_agent.py  run_multi_react.py  utils.py
rollout/searchers/: __init__.py  base.py  bm25_searcher.py  custom_searcher.py  faiss_searcher.py
rollout/tools/: serve_search.py  tool_get_document_bcp.py  tool_search.py  tool_search_bcp.py  tool_visit.py
scripts/: aggregation.sh  collect_trajs.py  download_dataset.py  hf_to_rollout.py  rollout.sh
